--- a/src/Styles/CountryCarousel.css
+++ b/src/Styles/CountryCarousel.css
@@ -7,5 +7,6 @@
 .object-fit-cover {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensure the image covers the container while maintaining aspect ratio */
+    object-fit: cover; 
+    filter: grayscale(100%)
 }
