--- a/src/Styles/CountryCarousel.css
+++ b/src/Styles/CountryCarousel.css
@@ -2,11 +2,16 @@
     height: 600px;
     margin-top: 15px;
     overflow: hidden; /* Ensure that any overflow is hidden */
+    border: 4px solid #000; /* Retro-style border */
+    background-color: #fff; /* Retro-style background color */
+    box-shadow: 10px 10px 0 #000; /* Retro-style shadow */
 }
 
 .object-fit-cover {
     width: 100%;
     height: 100%;
     object-fit: cover; 
-    filter: grayscale(100%)
+    filter: grayscale(100%);
+    border: 2px solid #000; /* Retro-style border */
+    box-shadow: 5px 5px 0 #000; /* Retro-style shadow */
 }
