--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -108,6 +108,9 @@
 .navbar .navbar-nav .nav-link {
     margin-left: 10px;
     margin-right: 10px;
+    font-weight: bold;
+    font-size: 1.1em;
+    
 }
 
 .navbar .navbar-nav .btn {
